🚧 chore: stric property initaliztion and package-lock-json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
       "@real-estate/domain": ["app/domain"]
     },
     "outDir": "./dist/out-tsc",
+    "strictPropertyInitialization": false,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
