--- a/angular.json
+++ b/angular.json
@@ -42,7 +42,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": ["./node_modules/@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
             "stylePreprocessorOptions": {
               "includePaths": ["node_modules", "src/scss/", "src/app/"]
             },
@@ -108,7 +108,7 @@
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": ["./node_modules/@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
             "stylePreprocessorOptions": {
               "includePaths": ["node_modules", "src/scss/", "src/app/"]
             },
