✨ feat: change fake-api to my api

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 
 # Node
 /node_modules
+back-end/node_modules/
 npm-debug.log
 yarn-error.log
 
@@ -40,3 +41,4 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
