--- a/angular.json
+++ b/angular.json
@@ -9,7 +9,7 @@
         "@schematics/angular:component": {
           "style": "scss",
           "displayBlock": true,
-          "prefix": "px",
+          "prefix": "re",
           "changeDetection": "OnPush"
         },
         "@schematics/angular:service": {
@@ -41,10 +41,20 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["./node_modules/@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.scss"
+            ],
             "stylePreprocessorOptions": {
-              "includePaths": ["node_modules", "src/scss/", "src/app/"]
+              "includePaths": [
+                "node_modules",
+                "src/scss/",
+                "src/app/"
+              ]
             },
             "scripts": []
           },
@@ -107,12 +117,53 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["./node_modules/@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.scss"
+            ],
             "stylePreprocessorOptions": {
-              "includePaths": ["node_modules", "src/scss/", "src/app/"]
+              "includePaths": [
+                "node_modules",
+                "src/scss/",
+                "src/app/"
+              ]
             },
             "scripts": []
+          }
+        },
+        "cypress-run": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "angular-real-estate:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "angular-real-estate:serve:production"
+            }
+          }
+        },
+        "cypress-open": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "watch": true,
+            "headless": false
+          }
+        },
+        "e2e": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "angular-real-estate:serve",
+            "watch": true,
+            "headless": false
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "angular-real-estate:serve:production"
+            }
           }
         }
       }
